crates/icydb-core/tests/ui/db/session_module_private.rs
use icydb_core::db::session::DbSession;

fn main() {}
